# 5560-MRI-Project

./: .gitignore  FINAL_REPORT.md  README.md  WALKTHROUGH.md  capture_layout.py  main.py  pyproject.toml
context/: 4 Tech Model- MRI Department Efficiency 2025-rev.xlsx
context/temp_text/: class2.txt  model_sheet1.txt  model_sheet2.txt  model_sheet3.txt  model_sheet4.txt  mri_presentation.txt  solving_wait_list.txt  (+1 more)
extra/: README.md  app.py  engine.py  entities.py
report/: 0_1_title_page.tex  5560_MRI_ProjectReport.aux  5560_MRI_ProjectReport.bbl  5560_MRI_ProjectReport.bcf  5560_MRI_ProjectReport.blg  5560_MRI_ProjectReport.out  5560_MRI_ProjectReport.run.xml  5560_MRI_ProjectReport.tex  5560_MRI_ProjectReport.toc  includes.tex  main.aux  main.bbl  main.bcf  main.blg  main.out  main.tex  main.toc  notation.tex  references.bib
results/: breaks_experiment_100k.csv  executive_summary.md  magnet_events.csv  magnet_performance.csv  magnet_performance_baseline.csv  magnet_performance_singles.csv  mri_digital_twin_gowned_waiting.csv  mri_digital_twin_magnet_performance.csv  mri_digital_twin_movements.csv  mri_digital_twin_patient_performance.csv  mri_digital_twin_report.txt  mri_digital_twin_states.csv  mri_digital_twin_summary.csv  mri_digital_twin_waiting_room.csv  patient_performance.csv  sensitivity_analysis_raw.csv  sensitivity_compliance_raw.csv  sensitivity_demand_raw.csv  simulation_stats.csv
src/: analysis.py  app.py  batch_run.py  collect_data.py  config.py  digital_twin.py  engine.py  entities.py  resources.py  simulation.py
tests/: test_simulation.py
(+30 files in other folders)
