[project]
name = "mri-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "simpy",
    "pandas",
    "streamlit",
    "plotly",
    "pysdl2>=0.9.17",
    "pygame>=2.6.1",
    "opencv-python>=4.11.0.86",
    "numpy>=2.3.5",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
